--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -17,4 +17,4 @@
     become_user : root
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8086:8082 rajatk2611/rajat-bank:1
+    command: docker run -itd -p 8086:8082 rajatk2611/rajat-bank1:1
